<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_to_fav"
        android:title="@string/menu_add_to_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_remove_from_fav"
        android:title="@string/menu_remove_from_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_show_fav"
        android:title="@string/menu_show_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_send_feedback"
        android:title="@string/menu_send_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>